# bento-goncalves-bolsa-familia-synth

./: .gitattributes  .gitignore  README.md  pyproject.toml
agents/: data_collector.md  econometrician.md  orchestrator.md  policy_specialist.md
config/: project_config.json
data/final/: README.md  final_estimates.csv  final_timeseries.csv  final_weights.csv
docs/: firpo_possebom_ci_python.md  methodology.md  outcomes_emprego_renda_expansion.md  sources.md
paper/economics_letters_project/: README.md  appendix.tex  main.tex  references.bib
paper/economics_letters_project/tables/: fig_notes.tex  tab_appendix_results.tex  tab_rais_bento.tex  tab_results.tex
scripts/: 01_collect_mds_bolsa.py  02_run_bf_synth.py  03_collect_bd_bigquery.py  04_collect_caged_tables.py  05_run_all_outcomes.py  06_write_econometric_article.py  07_build_tex_article.py  08_build_economics_letters_report.py  09_tune_pretrends.py  10_build_final_dataset.py
skills/: data_collection.md  matching.md  policy_interpretation.md  synthetic_control.md
sql/: caged_municipal_monthly.sql  cnpj_births_municipio_monthly.sql  finbra_expenses.sql  municipal_covariates.sql  rais_income_municipio.sql
src/bg_bolsa/: __init__.py  caged.py  config.py  data_sources.py  firpo_possebom.py  matching.py  reporting.py  synth.py
